--- a/custom_components/swidget/manifest.json
+++ b/custom_components/swidget/manifest.json
@@ -21,7 +21,7 @@
         { "registered_devices": true },
         {
           "hostname": "swidget*",
-          "macaddress": "E848B8*"
+          "macaddress": "24A160*"
         }
     ]
 }
