--- a/custom_components/swidget/manifest.json
+++ b/custom_components/swidget/manifest.json
@@ -6,7 +6,7 @@
     "issue_tracker": "https://github.com/michaelkkehoe/ha-swidgetissues",
     "dependencies": ["network"],
     "codeowners": ["@michaelkkehoe"],
-    "requirements": ["pyswidget @ git+https://github.com/michaelkkehoe/pyswidget.git"],
+    "requirements": ["pyswidget @ git+https://github.com/michaelkkehoe/pyswidget.git#v0.0.9"],
     "version": "0.0.1",
     "iot_class": "local_polling",
     "quality_scale": "platinum",
