--- a/custom_components/swidget/manifest.json
+++ b/custom_components/swidget/manifest.json
@@ -6,7 +6,7 @@
     "issue_tracker": "https://github.com/michaelkkehoe/ha-swidgetissues",
     "dependencies": ["network"],
     "codeowners": ["@michaelkkehoe"],
-    "requirements": [],
+    "requirements": [ "ssdp" ],
     "version": "0.0.2",
     "iot_class": "local_polling",
     "quality_scale": "platinum",
